package edu.uees.tutorias.service;

public interface Notificador {
    void enviar(String destinatario, String mensaje);
}
